--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
+    
     <header>
       <nav class="container">
         <ul>
@@ -22,6 +23,24 @@
           <li><a href="#blogs">Blogs</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
+        <div class="btn" id="openMenu">
+          Menu
+        </div class="btn">
+        
+        <div class="menuCard" id="menuCard">
+          <ol>
+            <li><a href="#" id="link">Home</a></li>
+            <li><a href="#about" id="link1">About</a></li>
+            <li><a href="#services" id="link2">Services</a></li>
+            <li><a href="#experience" id="link3">Experience</a></li>
+            <li><a href="#works" id="link4">Works</a></li>
+            <li><a href="#blogs" id="link5">Blogs</a></li>
+            <li><a href="#contact" id="link6">Contact</a></li>
+            <div class="btn1" id="closeMenu">
+              x
+            </div>
+          </ol>
+        </div>
       </nav>
       <div class="container header">
         <div class="header-left-wraper">
@@ -245,7 +264,7 @@
         </div>
       </div>
     </section>
-    <section id="Work">
+    <section id="works">
     <h2>Work</h2>
     <div class="container work">
       <div class="work-box">
@@ -277,7 +296,7 @@
       </div>
     </div> 
   </section>
-  <section id="Blog">
+  <section id="blogs">
     <h2>Blog Posts</h2>
     <div class="container blog">
       <div class="blog-box">
@@ -392,7 +411,7 @@
                 </p>
               </div>
         </section>
-        <section id= contactus>
+        <section id= "contact">
           <div class="container contact">
             <div class="contact-write">
             <h4>CONTACT</h4>
@@ -426,6 +445,8 @@
           </div>
           </div>
         </section>
+
+        <script src="script.js"></script>
 
   </body>
 </html>
